turned auto_tickbox into object constructor

--- a/tester_script.html
+++ b/tester_script.html
@@ -21,34 +21,35 @@
 </body>
 <script>
 var originalData = [];
-var filterCols = ["source", "target", "value"];
-var toFilter = [];
-div_id = "body";
+var exclude_columns = ["source", "target", "value"];
+var div_id = "body";
+var at = new auto_tickboxer(exclude_columns, div_id, "sankey_data.csv")
 
-d3.csv("sankey_data.csv", function(error, data) {
+at.initialise();
 
-	colnames = Object.keys(data[0])
-	toFilter = colnames.filter(function(d){
-  		return filterCols.indexOf(d) == -1;
-  	})
-  	
-	test_1 = toFilter[0]
+function auto_tickboxer(exclude_columns, div_id, data_file_path){
+	this.exclude_columns = exclude_columns;
+	this.div_id = div_id;
+	this.data_file_path = data_file_path;
 
-	
+	this.initialise = function(exclude_columns, div_id, data_file_path){
+		d3.csv(this.data_file_path, function(error, data) {
 
-	for (i = 0; i<toFilter.length; i++){
-		unique_vars = d3.keys(d3.nest().key(function (d) { return d[toFilter[i]]; }).map(data))
-		checkboxes = d3.select(div_id).append("div").classed("control", true).classed(unique_vars[i] + "_controls", true).selectAll("label").data(unique_vars).enter().append("label").property("value", function(d){return d;});
+		var colnames = Object.keys(data[0])
+		var toFilter = colnames.filter(function(d){
+	  		return this.exclude_columns.indexOf(d) == -1;
+	  	})
 
-		checkboxes.append("input").property("type","checkbox").property("checked", true);
+		for (i = 0; i<toFilter.length; i++){
+			unique_vars = d3.keys(d3.nest().key(function (d) { return d[toFilter[i]]; }).map(data))
+			checkboxes = d3.select(this.div_id).append("div").classed("control", true).classed(unique_vars[i] + "_controls", true).selectAll("label").data(unique_vars).enter().append("label").property("value", function(d){return d;});
 
-		checkboxes.append("text").text(function(d){return d;});
+			checkboxes.append("input").property("type","checkbox").property("checked", true);
+
+			checkboxes.append("text").text(function(d){return d;});
+		}
+	  })
 	}
-	d3.selectAll("label").on("change", this_val)
-
-	function this_val(){
-		console.log(this.value);
-	}
-  });
+}
 </script>
 </html>
