--- a/tester_script.html
+++ b/tester_script.html
@@ -4,7 +4,8 @@
 <head>
 	<title> TESTER </title>
 	<script src="https://d3js.org/d3.v3.min.js"></script>
-	<script src="AutoTickBoxer.js"></script>
+	<script src="javascript/AutoTickBoxer.js"></script>
+	<script src="javascript/sankey.js"></script>
 </head>
 <style type="text/css">
 .control {padding: 6px; font-size:14px;}
