--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ var dataRead = new Promise(function(resolve, reject){
 
 dataRead.then(function(e){
   atb = new AutoTickBoxer(excludeColumns, divId, originalData);
-  atb.generateTickboxes();
+  atb.generateTickboxes({"offence_type" : {"valueNames" : {"tew" : "Triable Either Way"}, "selectAll" : true, "name": "Type of Offence"}});
   d3.selectAll(atb.allCheckboxClass).on("change", checkboxEvent);
 });
 
@@ -437,18 +437,5 @@ function checkboxEvent(){
 }
 
 </script>
-
-<!-- Google Analytics -->
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-99085740-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
-
 </body>
 </html>
